# stork

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS.md  FIXES_COMPLETED.md  LICENSE  LocalP2PAppDevelopmentPlan.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_PROGRESS.md  PHASE2_CROSSPLATFORM_PLAN.md  PHASE2_PROGRESS_UPDATE.md  PHASE3_ADVANCED_FEATURES_PLAN.md  PHASE4_SECURITY_SUMMARY.md  PROJECT_SPEC.md  README.md  README_GITHUB.md  RELEASE_NOTES_v1.0.0.md  SECURITY_ENHANCEMENTS_COMPLETION_SUMMARY.md  SECURITY_TEST_COVERAGE.md  SECURITY_USER_GUIDE.md  THEME_FLICKER_FIX.md  WINDOWS_DEPLOYMENT.md  analysis_options.yaml  convert_to_ico.ps1  create_large_icon.ps1  debug_large_file_transfer.dart  debug_stats.dart  index.html  installer.nsi  package.json  pnpm-lock.yaml  pubspec.yaml  reset_onboarding.dart  reset_security_state.dart  script.js  security_integration_summary.md  style.css  (+15 more)
StorkP2P-v1.0.0-Windows-x64/: README.txt
android/app/: build.gradle.kts
downloads/: Workout.txt  test_file.txt  ui_test.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: peer.dart  transfer_history.dart
lib/screens/: onboarding_screen.dart  security_settings_screen.dart  (+1 more)
linux/: CMakeLists.txt
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  stork_core.rs
test/: widget_test.dart
test_files/: file1.txt  file2.txt  file3.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+45 files in other folders)
