[package]
name = "stork"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "stork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri      = { version = "1.6", features = ["api-all"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next  = "2.0"

# This is the standard, correct way to add this dependency.
magic-wormhole = { version = "0.7.6", features = ["transfer", "transit"] }

# Standard supporting libraries
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow     = "1"
async-std  = "1.12"
